<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/pcalc_den_dovi"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/table_margin"
            android:layout_marginLeft="@dimen/table_margin"
            android:padding="4dp" >

            <TableRow android:id="@+id/tableRow4" >

                <TextView
                    android:id="@+id/textView1"
                    style="@style/PCalcTextView"
                    android:text="@string/pcalc_oklad_dolg"/>

                <TextView
                    android:id="@+id/txDolOklad"
                    style="@style/PCalcTextView" />
            </TableRow>

            <TableRow android:id="@+id/tableRow5" >

                <TextView
                    android:id="@+id/textView3"
                    style="@style/PCalcTextView"
                    android:text="@string/pcalc_oklad_zavan"
                    android:textSize="@dimen/shrift_size" />

                <TextView
                    android:id="@+id/txZvanOklad"
                    style="@style/PCalcTextView"
                    android:textSize="@dimen/shrift_size" />
            </TableRow>

            <TableRow android:id="@+id/tableRow6" >

                <TextView
                    android:id="@+id/txNameProcNadb"
                    style="@style/PCalcTextView"
                    android:text="@string/pcalc_nadb_visl_for_pensi"
                    android:textSize="@dimen/shrift_size" />

                <TextView
                    android:id="@+id/txVislProcNadb"
                    style="@style/PCalcTextView"
                    android:textSize="@dimen/shrift_size" />
            </TableRow>

            <TableRow android:id="@+id/tableRow7" >

                <TextView
                    android:id="@+id/txView7"
                    style="@style/PCalcTextView"
                    android:text="@string/pcalc_sum_den_dovi"
                    android:textSize="@dimen/shrift_size" />

                <TextView
                    android:id="@+id/txSumDov"
                    style="@style/PCalcTextView"
                    android:textSize="@dimen/shrift_size" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/pcalc_rashet_pens"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/table_margin"
            android:layout_marginLeft="@dimen/table_margin"
            android:padding="4dp" >

            <TableRow android:id="@+id/TableRow04" >

                <TextView
                    android:id="@+id/txNameRaionKoeff"
                    style="@style/PCalcTextView"
                    android:text="@string/pcalc_nadb_raion_koeff"
                    android:textSize="@dimen/shrift_size" />

                <TextView
                    android:id="@+id/txRaionKoeff"
                    style="@style/PCalcTextView"
                    android:textSize="@dimen/shrift_size" />
            </TableRow>

            <TableRow android:id="@+id/TableRow02" >

                <TextView
                    android:id="@+id/txDenDovForIsch"
                    style="@style/PCalcTextView"
                    android:text="@string/pcalc_sum_den_dov_for_isch"
                    android:textSize="@dimen/shrift_size" />

                <TextView
                    android:id="@+id/txDenDovForIschislPensii"
                    style="@style/PCalcTextView"
                    android:textSize="@dimen/shrift_size" />
            </TableRow>

            <TableRow android:id="@+id/TableRow01" >

                <TextView
                    android:id="@+id/TextView03"
                    style="@style/PCalcTextView"
                    android:text="@string/pcalc_razm_v_procent"
                    android:textSize="@dimen/shrift_size" />

                <TextView
                    android:id="@+id/txRazmVProcent"
                    style="@style/PCalcTextView"
                    android:textSize="@dimen/shrift_size" />
            </TableRow>

            <TableRow android:id="@+id/TableRow06" >

                <TextView
                    android:id="@+id/TextView06"
                    style="@style/PCalcTextView"
                    android:text="@string/pcalc_razm_min_pensii"
                    android:textSize="@dimen/shrift_size" />

                <TextView
                    android:id="@+id/txMinPensii"
                    style="@style/PCalcTextView"
                    android:textSize="@dimen/shrift_size" />
            </TableRow>

            <TableRow android:id="@+id/TableRow03" >

                <TextView
                    android:id="@+id/TextView05"
                    style="@style/PCalcTextView"
                    android:text="@string/pcalc_razm_pensii"
                    android:textSize="@dimen/shrift_size" />

                <TextView
                    android:id="@+id/txRasmPensii"
                    style="@style/PCalcTextView"
                    android:textSize="@dimen/shrift_size" />
            </TableRow>

            <TableRow android:id="@+id/TableRow05" >

                <TextView
                    android:id="@+id/TextView04"
                    style="@style/PCalcTextView"
                    android:text="@string/pcalc_razm_pensii_ural_koff"
                    android:textSize="@dimen/shrift_size" />

                <TextView
                    android:id="@+id/txRazmUchetRaionKoeff"
                    style="@style/PCalcTextView"
                    android:textSize="@dimen/shrift_size" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/pcalc_nadb"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/table_margin"
            android:layout_marginLeft="@dimen/table_margin"
            android:padding="4dp" >

            <TableRow
                android:id="@+id/TableRow11"
                tools:ignore="UselessParent" >

                <TextView
                    android:id="@+id/txNadbavka"
                    style="@style/PCalcTextView"
                    android:textSize="@dimen/shrift_size_small" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/txItog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/pcalc_result_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</ScrollView>